--- a/index.html
+++ b/index.html
@@ -1,33 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<script
+			src="https://kit.fontawesome.com/bf28b7cad2.js"
+			crossorigin="anonymous"
+		></script>
 
-  Build The Community Your Fans Will Love
+		<link rel="stylesheet" href="/styles.css" />
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+			rel="stylesheet"
+		/>
 
-  Register
+		<title>
+			Frontend Mentor | Huddle landing page with single introductory section
+		</title>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+		<style>
+			.attribution {
+				font-size: 11px;
+				text-align: center;
+			}
+			.attribution a {
+				color: hsl(228, 45%, 44%);
+			}
+		</style>
+	</head>
+	<body>
+		<div class="global">
+			<header>
+				<img class="logo" src="/images/logo.svg" alt="Logo Huddle" />
+			</header>
+
+			<main class="main">
+				<!-- <div class="preview">image goes here</div> -->
+				<img class="preview" src="/images/illustration-mockups.svg" alt="" />
+				<div class="text">
+					<h1 class="build">Build The Community Your Fans Will Love</h1>
+
+					<p class="description">
+						Huddle re-imagines the way we build communities. You have a voice,
+						but so does your audience. Create connections with your users as you
+						engage in genuine discussion.
+					</p>
+					<button class="btn">Register</button>
+				</div>
+      </main>
+        
+        <div class="social">
+          
+          <a href=""><i class="icon fa-brands fa-facebook-f"></i></a>
+          <a href=""><i class="icon fa-brands fa-twitter"></i></a>
+          <a href=""><i class="icon fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+	</body>
 </html>
